--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,10 +38,17 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
+db.poi.driver=org.h2.Driver
+db.poi.url="jdbc:h2:mem:poiDB"
+db.poi.user=sa
+db.poi.password=""
+
+
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+#evolutionplugin=disabled
 
 # Logger
 # ~~~~~
